# spectraview

./: README.md  SPECTRAVIEW-DEEP-DIVE.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/parsers/: column_detector.rs  generic_ascii.rs  mod.rs  xrdml.rs
src/components/: DataPanel.tsx  DropZone.tsx  PlotCanvas.tsx  StylePanel.tsx  Toolbar.tsx  WelcomeScreen.tsx
src/d3/: PlotEngine.ts  StylePresets.ts
src/stores/: useDatasets.ts
src/utils/: colors.ts  units.ts
